bpo-44297: Fix missing line number in generator expressions (GH-26821)

* Make sure that line number is set when entering comprehension scope in compiler.

(cherry picked from commit 82e5c28af7049c4f5343c808f172cbe2e145f49b)